# Oganesson

./: .gitignore  Cargo.toml  LICENSE  README.md
oganesson/: Cargo.toml
oganesson/src/: collision.rs  lib.rs  object.rs  world.rs
oganesson/src/quantity/: consts.rs  scalar.rs  unit.rs  vector.rs
physics/src/: collision.rs  lib.rs
physics/src/quantity/: mod.rs  scalar.rs  unit.rs  vector.rs
simulation/: Cargo.toml
simulation/src/: main.rs
src/: collision.rs  lib.rs  main.rs  object.rs  simulation.rs  transform.rs  universe.rs
src/quantity/: consts.rs  dimension.rs  field.rs  mod.rs  rotation.rs  scalar.rs  tensor.rs  unit.rs  vector.rs
src/simulation/: color.rs  gui.rs  mod.rs  plot.rs  simulation.rs
