[package]
name = "oganesson"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = { version="0.8.1", optional = true }

[features]
default = ["simulation"]
simulation = ["dep:ggez"]
relativistic = []
