[package]
name = "oganesson"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = { version="0.127.0", optional = true }

[features]
default = ["simulation"]
simulation = ["dep:piston_window"]
relativistic = []
