[package]
name = "oganesson"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = { version="0.128.0", optional = true }
plotters = "0.3.4"
plotters-piston = "0.3.0"

[features]
default = ["simulation"]
simulation = ["dep:piston_window"]
relativistic = []
